# apptainer-compose

./: .gitignore  Cargo.toml  Makefile  README.md
examples/00-hello-world/: README.md  apptainer-compose.yml
examples/01-web-server/: README.md  apptainer-compose.yml
examples/02-multi-service/: README.md  apptainer-compose.yml
examples/03-environment-variables/: .env  README.md  apptainer-compose.yml
examples/04-volumes/: README.md  apptainer-compose.yml
examples/05-depends-on/: README.md  apptainer-compose.yml
examples/06-healthcheck/: README.md  apptainer-compose.yml
examples/07-gpu-nvidia/: README.md  apptainer-compose.yml
examples/08-build-from-dockerfile/: Dockerfile  README.md  app.py  apptainer-compose.yml
examples/09-multi-file-override/: README.md  apptainer-compose.override.yml  apptainer-compose.yml
examples/10-profiles/: README.md  apptainer-compose.yml
examples/11-resource-limits/: README.md  apptainer-compose.yml
examples/12-web-database/: README.md  apptainer-compose.yml
examples/13-apptainer-extensions/: README.md  apptainer-compose.yml
examples/14-dns-and-networking/: README.md  apptainer-compose.yml
examples/15-full-stack-app/: .env  README.md  apptainer-compose.yml  init.sql  nginx.conf
examples/16-ext3-volumes/: README.md  apptainer-compose.yml
examples/17-elastic-stack/: README.md  apptainer-compose.yml
src/: error.rs  logging.rs  main.rs
src/cli/: mod.rs
src/compose/: interpolation.rs  merge.rs  mod.rs  normalize.rs  parser.rs  types.rs
src/driver/: apptainer.rs  image.rs  instance.rs  logs.rs  mod.rs  (+2 more)
(+48 files in other folders)
