[package]
name = "apptainer-compose"
version = "0.1.0"
edition = "2021"
description = "A drop-in replacement for docker-compose using Apptainer"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
shellexpand = "3"
regex = "1"
nix = { version = "0.29", features = ["signal", "process"] }
colored = "2"
which = "7"
dirs = "6"
fs2 = "0.4"
sha2 = "0.10"
hex = "0.4"
shell-words = "1"
gethostname = "0.5"
whoami = "1"
indicatif = "0.17"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
